# mentor-x-production

./: .gitignore  README.md  gitignore  tall nodejs npm -y
AI-ChatBot/: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  main.py  pyproject.toml  requirements.txt
AI-ChatBot/api/: main.py  routes.py
AI-ChatBot/config/: settings.py
AI-ChatBot/dataIngestion/: document_processor.py  pdf_processor.py
AI-ChatBot/evaluation/: evaluator.py
AI-ChatBot/retrieval/: retriever.py
AI-ChatBot/utils/: logging.py  models.py
AI-ChatBot/vectorStore/: chroma_store.py
AI-ChatBot/vectorStore/chroma_db/: chroma.sqlite3
ID-Verify/: .gitignore  APP.py  README.md  requirements.txt
ID-Verify/api/: main.py
ID-Verify/config/: settings.py
ID-Verify/pages/: guide.py  home.py
ID-Verify/services/: detection_service.py  id_decoder.py  image_processing.py  llm_explainer.py  ocr_service.py  parsing_service.py  pipeline.py  validation_service.py
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  nohup.out  pom.xml  run.bat
dashboard-front/: .gitignore  BATCH_FIX_COMMANDS.md  BEFORE_AND_AFTER.md  STABILIZATION_GUIDE.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.js  tsconfig.json
dashboard-front/front-master/: Dockerfile  README.md  STABILIZATION_COMPLETE_SUMMARY.md  angular.json  tailwind.config.js
dashboard-front/scratch/: find_backticks.py
parent-front/: angular.json  package-lock.json  package.json  proxy.conf.js
student-front/: README.md  angular.json  package-lock.json  package.json
(+678 files in other folders)
