[project]
name = "mentor-x-ai"
version = "2.0.0"
description = "RAG-powered intelligent tutoring system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain==0.3.25",
    "langchain-groq==0.3.2",
    "langchain-community==0.3.23",
    "langchain-chroma==0.2.4",
    "langchain-huggingface==0.1.2",
    "chromadb==1.2.0",
    "sentence-transformers==3.4.1",
    "pypdf==5.4.0",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.3",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "python-dotenv==1.1.0",
    "tenacity==9.1.2",
    "numpy==2.2.4",
    "tiktoken==0.9.0",
    "rank-bm25==0.2.2",
]

[project.dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = [
    "api",
    "config",
    "dataIngestion",
    "evaluation",
    "retrieval",
    "utils",
    "vectorStore",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
